没有审批人支持根据配置自动通过，优化针对节点的自动跳过，增加按钮的显影控制